--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-/.phpunit.cache
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-.env
-.env.backup
-.env.production
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
-/.vscode
+url-shortener/.phpunit.cache
+url-shortener/node_modules
+url-shortener/public/build
+url-shortener/public/hot
+url-shortener/public/storage
+url-shortener/storage/*.key
+url-shortener/vendor
+url-shortener/.env
+url-shortener/.env.backup
+url-shortener/.env.production
+url-shortener/.phpunit.result.cache
+url-shortener/Homestead.json
+url-shortener/Homestead.yaml
+url-shortener/auth.json
+url-shortener/npm-debug.log
+url-shortener/yarn-error.log
+url-shortener/.fleet
+url-shortener/.idea
+url-shortener/.vscode
